--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+node_modules/
+dist/
+
 # =========================
 # Operating System Files
 # =========================
@@ -45,3 +48,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+database.sqlite
+src/back/db/database.sqlite
