--- a/package.json
+++ b/package.json
@@ -23,17 +23,32 @@
     "webpack-material-design-icons": "0.0.2"
   },
   "dependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
     "body-parser": "^1.15.2",
+    "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "method-override": "^2.3.7",
+    "node-sass": "^4.1.1",
     "pure-css": "^1.0.4",
-    "purecss": "^0.6.1",
-    "sequelize": "^3.28.0",
+    "purecss": "^0.6.2",
+    "sass-loader": "^4.1.1",
+    "sequelize": "^3.29.0",
     "serve-favicon": "^2.3.2",
     "sqlite": "^2.2.4",
+    "sqlite3": "^3.1.8",
+    "style-loader": "^0.13.1",
+    "transform-runtime": "0.0.0",
+    "vue-loader": "^10.0.2",
     "vue-moment": "^2.0.2",
+    "vue-router": "^2.1.1",
+    "vue-template-compiler": "^2.1.8",
     "vuex": "^2.1.1",
+    "webpack": "^1.14.0",
     "webpack-material-design-icons": "0.0.2"
   }
 }
